# gradabeam

./: .gitignore  ATAC_start_seq.txt  MANIFEST.in  README.md  environment.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: agent-review.yml  lint.yml  perf-regression.yml  publish.yml  typecheck.yml  unit-tests.yml
benchmarks/: RESULTS.md  bench_harness.py  perf_benchmark.py  perf_core.py  perf_regression.py  profile_step3.py
examples/: adabeam_atac.sh  gradabeam_atac.sh
gradabeam/: __init__.py  __main__.py  ada_utils.py  ada_utils_test.py  adabeam.py  adabeam_designer.py  adabeam_designer_test.py  adabeam_optimizer.py  adabeam_optimizer_test.py  adabeam_perf_regression_test.py  adabeam_test.py  adaptive_rollout.py  adaptive_rollout_test.py  argparse_lib.py  argparse_lib_test.py  constants.py  gradabeam_designer.py  gradabeam_designer_test.py  gradabeam_optimizer.py  gradabeam_optimizer_test.py  opt_utils.py  opt_utils_test.py  optimization_class.py  optimizer.py  optimizer_test.py  seq_utils.py  testing_utils.py  tism.py  typing.py
gradabeam/fixtures/: PROVENANCE.md  adabeam_golden_count_letter.json  adabeam_golden_substring_count.json  generate_golden.py
oracles/: bpnet.py  count_letter.py  substring_count.py  template.py
